# Kairo

./: .gitattributes  .gitignore  API.md  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
assets/scripts/: test.lua
assets/shaders/: default.frag  default.vert
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build-asan/dungeon/: Makefile  cmake_install.cmake
build-asan/engine/: Makefile  cmake_install.cmake
build-asan/sandbox/: Makefile  cmake_install.cmake
build-asan/tests/: Makefile  cmake_install.cmake
docs/: guide.html  index.html  search.js  style.css
dungeon/: CMakeLists.txt  game.cpp  game.h  main.cpp
engine/: CMakeLists.txt
engine/assets/: asset_manager.h  handle.h
engine/assets/loaders/: shader_loader.h  texture_loader.h
engine/audio/: audio.cpp  audio.h
engine/core/: application.h  engine.cpp  engine.h  job_system.cpp  job_system.h  log.cpp  log.h  network.cpp  network.h  save_system.cpp  save_system.h  time.cpp  time.h  types.h
engine/ecs/: archetype.cpp  archetype.h  component.h  entity.h  hierarchy.h  prefab.cpp  prefab.h  query.h  system.h  tag_system.h  world.cpp  world.h
engine/editor/: asset_browser.cpp  asset_browser.h  command.h  console_panel.cpp  console_panel.h  editor_panels.cpp  editor_panels.h  gizmo.cpp  gizmo.h  imgui_layer.cpp  imgui_layer.h  profiler_panel.cpp  profiler_panel.h
engine/events/: event.h  event_bus.h
engine/gameplay/: animation.cpp  animation.h  entity_pool.h  health.h  pathfinding.cpp  pathfinding.h  state_machine.h  steering.cpp  steering.h  timer.h  tween.h  wave_spawner.h
engine/graphics/: batch_renderer.cpp  batch_renderer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  debug_draw.cpp  debug_draw.h  font.cpp  font.h  frame_graph.cpp  frame_graph.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  post_process.cpp  post_process.h  renderer.cpp  renderer.h  screen_utils.h  shader.cpp  shader.h  shader_watcher.cpp  shader_watcher.h  shadows.cpp  shadows.h  sprite_sheet.cpp  sprite_sheet.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  ui.cpp  ui.h  vertex.h  window.cpp  window.h
engine/graphics/effects/: bloom.cpp  bloom.h  vignette.cpp  vignette.h
engine/input/: input.cpp  input.h
engine/math/: mat4.h  math_utils.h  simd.h  vec2.h  vec3.h  vec4.h
engine/memory/: linear_allocator.h  pool_allocator.h  stack_allocator.h
engine/particles/: particle.h  particle_emitter.cpp  particle_emitter.h
engine/physics/: aabb.h  circle.cpp  circle.h  collision.cpp  collision.h  joints.cpp  joints.h  physics_world.cpp  physics_world.h  raycast.cpp  raycast.h  rigidbody.h  spatial_grid.cpp  spatial_grid.h
engine/scene/: scene.h  scene_manager.cpp  scene_manager.h  scene_serializer.cpp  scene_serializer.h
engine/scripting/: script_engine.cpp  script_engine.h  script_hot_reload.cpp  script_hot_reload.h
sandbox/: CMakeLists.txt  game.cpp  game.h  main.cpp
tests/: CMakeLists.txt  test_ecs.cpp  test_events.cpp  test_framework.h  test_gameplay.cpp  test_main.cpp  test_math.cpp  test_memory.cpp  test_phase11.cpp  test_phase12.cpp  test_phase9.cpp  test_physics.cpp
